src/test/ui/unsafe/unsafe-unstable-const-fn.stderr
error[E0133]: pointer operation is unsafe and requires unsafe function or block
  --> $DIR/unsafe-unstable-const-fn.rs:9:5
   |
LL |     a == b
   |     ^^^^^^ pointer operation
   |
   = note: operations on pointers in constants

error: aborting due to previous error

For more information about this error, try `rustc --explain E0133`.
